# r_todo

./: Cargo.toml  README.md  todos.db  todos.json
src/: main.rs  todos.db
src/app/: state.rs  ui.rs
src/db/: handler.rs
src/models/: color_scheme.rs  mod.rs  todo.rs
src/ui/: edit_popup.rs  help_and_error.rs  main.rs  mod.rs  todos.rs
