[package]
name = "r_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = "0.28.1"
directories = "6.0.0"
ratatui = "0.29.0"
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
thiserror = "2.0.11"

[[bin]]
name = "r_todo"
path = "src/main.rs"
